<resources>
    <string name="app_name">piv_dev_project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Головна</string>
    <string name="title_dashboard">Групи</string>
    <string name="title_notifications">Налаштування</string>


    <string name="add_exist_group_dialog_title_text">Додати існуючу групу</string>
    <string name="add_exist_group_set_name_group_text">Введіть код групи</string>
    <string name="name_exist_grop_reg">Назва групи</string>
    <string name="name_exist_grop_reg_hint">Код існуючої групи</string>

    <string name="add_new_group_dialog_title_text">Створити нову групу</string>
    <string name="add_new_group_set_name_group_text">Введіть назву нової групи</string>
    <string name="add_new_group_dialog_title_text_hint">Введіть назву групи</string>

    <string name="settings_edit_email_text">Змінити email</string>
    <string name="settings_edit_email_edit_text_hint">Введіть новий email</string>
    <string name="settings_save_email_button_txt">Зберегти новий email</string>

    <string name="settings_edit_password_text">Змінити пароль</string>
    <string name="settings_edit_password_edit_text_hint">Введіть новий пароль</string>
    <string name="settings_check_password_hint">Повторіть пароль</string>
    <string name="settings_save_password_button_txt">Зберегти новий пароль</string>
    <string name="settings_logout_button">Вийти з акаунту</string>

    <string name="email_field_reg">Введіть ваш email</string>
    <string name="password_field_reg">Введіть ваш пароль</string>
    <string name="login_recovery_password_text">Забули пароль?</string>

    <string name="note_view_delete_button_title_text">Видалити</string>
    <string name="note_view_edit_button_title_text">Редагувати</string>
    <string name="note_view_back_button_title_text">Назад</string>

</resources>