<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".lesson.ViewLessonActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!--<include layout="@layout/toolbar"
            android:id="@+id/toolbar_note_view"
            />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            >

            <RelativeLayout
                android:id="@+id/note_view_data_time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/note_view_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_slab_light"
                    android:text="note_view_date_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/note_view_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/roboto_slab_light"
                    android:text="note_view_time_text"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/note_view_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_data_time_layout"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="note_view_title_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/note_view_place_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_title_text_view"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="note_view_group_title_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/note_view_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_place_title_text_view"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_slab"
                android:text="note_view_description_text"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/note_view_category_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_description_text_view"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/roboto_slab"
                android:text="note_view_category_title_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/note_view_category_list_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_category_title_text_view"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_slab"
                android:text="note_view_category_list_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_category_list_text_view"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/roboto_slab"
                android:text="Розташування"
                android:textSize="16sp" />

            <RelativeLayout

                android:layout_below="@+id/note_view_category_list_file_view"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/note_view_edit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/note_view_delete_button"
                    android:layout_marginBottom="10dp"

                    android:fontFamily="@font/roboto_slab"
                    android:letterSpacing="0"
                    android:onClick="editNote"
                    android:text="@string/note_view_edit_button_title_text"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/note_view_cancel_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/note_view_edit_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/roboto_slab"
                    android:onClick="cancel"
                    android:text="@string/note_view_back_button_title_text" />

                <Button
                    android:id="@+id/note_view_delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"

                    android:fontFamily="@font/roboto_slab"

                    android:letterSpacing="0"
                    android:onClick="deleteFromFirebase"
                    android:text="@string/note_view_delete_button_title_text"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/note_view_category_list_file_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/roboto_slab"
                android:text="Посилання"
                android:textSize="16sp" />


        </RelativeLayout>

    </RelativeLayout>


</ScrollView>